Error Mitigation/MagiCoder/Data/javax_crypto_spec/javax_crypto_specOutputResult.txt
Sample: DESedeKeySpec_2
----------------------------------------------------------------
output:
./Data/javax_crypto_spec/javaFiles/DESedeKeySpec_2.java:17: error: incompatible types: byte[] cannot be converted to Key
            Key key = keySpec.getKey();
                                    ^
1 error


================================================================

Sample: DESKeySpec_2
----------------------------------------------------------------
stdout:
Generated key: 

================================================================

Sample: DHParameterSpec_4
----------------------------------------------------------------
output:
./Data/javax_crypto_spec/javaFiles/DHParameterSpec_4.java:5: error: incompatible types: int cannot be converted to BigInteger
        DHParameterSpec dhParameterSpec = new DHParameterSpec(1024, 2);
                                                              ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error


================================================================

Sample: DHPrivateKeySpec_2
----------------------------------------------------------------
output:
./Data/javax_crypto_spec/javaFiles/DHPrivateKeySpec_2.java:7: error: incompatible types: int cannot be converted to BigInteger
        DHPrivateKeySpec dhPrivateKeySpec = new DHPrivateKeySpec(privateValue, 1024, 1024);
                                                                               ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error


================================================================

Sample: DHPublicKeySpec_2
----------------------------------------------------------------
stdout:
The value of g is: 10

================================================================

Sample: DHPublicKeySpec_4
----------------------------------------------------------------
stdout:
Public Y: 5

================================================================

Sample: GCMParameterSpec_2
----------------------------------------------------------------
stdout:
0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 
================================================================

Sample: GCMParameterSpec_3
----------------------------------------------------------------
stdout:
Authentication tag length: 128

================================================================

Sample: IvParameterSpec_2
----------------------------------------------------------------
stdout:
0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 
================================================================

Sample: OAEPParameterSpec_2
----------------------------------------------------------------
output:
./Data/javax_crypto_spec/javaFiles/OAEPParameterSpec_2.java:5: error: no suitable constructor found for OAEPParameterSpec(String,String)
        OAEPParameterSpec oaepParameterSpec = new OAEPParameterSpec("MGF1", "SHA-256");
                                              ^
    constructor OAEPParameterSpec.OAEPParameterSpec() is not applicable
      (actual and formal argument lists differ in length)
    constructor OAEPParameterSpec.OAEPParameterSpec(String,String,AlgorithmParameterSpec,PSource) is not applicable
      (actual and formal argument lists differ in length)
1 error


================================================================

Sample: PBEKeySpec_2
----------------------------------------------------------------
stdout:
Salt is null

================================================================

Sample: PBEKeySpec_3
----------------------------------------------------------------
stdout:
Iteration count: 0

================================================================

Sample: PBEKeySpec_4
----------------------------------------------------------------
output:
./Data/javax_crypto_spec/javaFiles/PBEKeySpec_4.java:4: error: cannot find symbol
import java.security.spec.PBEKeySpec;
                         ^
  symbol:   class PBEKeySpec
  location: package java.security.spec
1 error


================================================================

Sample: PBEKeySpec_5
----------------------------------------------------------------
stdout:
Key length: 0

================================================================

Sample: PBEParameterSpec_2
----------------------------------------------------------------
stdout:
1 2 3 4 5 
================================================================

Sample: PBEParameterSpec_3
----------------------------------------------------------------
stdout:
Iteration count: 10

================================================================

Sample: RC2ParameterSpec_3
----------------------------------------------------------------
output:
./Data/javax_crypto_spec/javaFiles/RC2ParameterSpec_3.java:6: error: incompatible types: int cannot be converted to byte[]
        RC2ParameterSpec spec = new RC2ParameterSpec(128, 10);
                                                          ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error


================================================================

Sample: RC2ParameterSpec_4
----------------------------------------------------------------
stderr:
Exception in thread "main" java.lang.IllegalArgumentException: IV too short
	at java.base/javax.crypto.spec.RC2ParameterSpec.<init>(RC2ParameterSpec.java:98)
	at java.base/javax.crypto.spec.RC2ParameterSpec.<init>(RC2ParameterSpec.java:73)
	at RC2ParameterSpec_4.main(RC2ParameterSpec_4.java:5)

================================================================

Sample: RC2ParameterSpec_5
----------------------------------------------------------------
output:
./Data/javax_crypto_spec/javaFiles/RC2ParameterSpec_5.java:5: error: incompatible types: int cannot be converted to byte[]
        RC2ParameterSpec spec = new RC2ParameterSpec(128, 123);
                                                          ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error


================================================================

Sample: RC5ParameterSpec_2
----------------------------------------------------------------
stdout:
Number of rounds: 16

================================================================

Sample: RC5ParameterSpec_4
----------------------------------------------------------------
stdout:
Hash code: 58

================================================================

Sample: RC5ParameterSpec_5
----------------------------------------------------------------
stdout:
true
false
false

================================================================

Sample: SecretKeySpec_2
----------------------------------------------------------------
stdout:
109 121 83 101 99 114 101 116 75 101 121 
================================================================

Sample: SecretKeySpec_3
----------------------------------------------------------------
stdout:
Algorithm: AES

================================================================

Sample: SecretKeySpec_4
----------------------------------------------------------------
stdout:
RAW

================================================================

